src/tests/snapshots/synoik__tests__window_opening__check_target_size@dwP0.25.snap
---
source: src/tests/window_opening.rs
description: "default column width: P0.25"
expression: snapshot
---
initial configure:
size: 300 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 300 × 688, bounds: 1248 × 688, states: [Activated]
