src/tests/snapshots/synoik__tests__window_opening__check_target_size@dwU-b-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: U\nborder on\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 680, bounds: 1231 × 680, states: []

post-map configures:
size: 1 × 680, bounds: 1231 × 680, states: [Activated]
